--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,4 @@
 ---> Admin tarafinda rezervasyon sayfasinda tarih formati duzenlenecek.
 ---> Admin tarafinda hakkimda yazisi girildigi zaman create metodu gorunmesin.
 ---> Admin tarafinda öne çıkan yazisi girildigi zaman create metodu gorunmesin.
+---> Ana sayfada öne çıkan ürünlerimiz kısmında hamburger, makarna, pizza ve salatadan birer adet ürün getirilecek.
