mail section completed

--- a/Todo.txt
+++ b/Todo.txt
@@ -5,3 +5,4 @@
 ---> Sepete urun eklendigi zaman sepet uzerinde urun sayisi artsin.
 ---> Trigger, sepete insert islemi oldugu anda toplam degeri tetikleyici uzerinden calistir.
 ---> QR Kod taranacak daha sonra QR kod çözümlenecek (API tarafında BasketsController'da). Sonra bir kosul yazilacak, QR Koddan gelen string ifade icin. Daha sonra alt sorgu ile MenuTableId degeri cekilecek (string ifadeden gelen menuTableName alaninin Id degerini al diye).
+---> Mail gönderme işleminde mesaj kısmında kalın italik yazma gibi alanlar eklensin Texteditor formatı.
